--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     color: var(--fg);
   }
 
+  /* ---------- Layout ---------- */
+
   header {
     padding: 32px;
     border-bottom: 1px solid var(--line);
@@ -44,12 +46,13 @@
 
   section {
     display: none;
-    max-width: 720px;
   }
 
   section.active {
     display: block;
   }
+
+  /* ---------- Language ---------- */
 
   .lang {
     position: fixed;
@@ -65,6 +68,8 @@
     margin-left: 8px;
     color: var(--muted);
   }
+
+  /* ---------- Tabs ---------- */
 
   .tabs {
     display: flex;
@@ -89,6 +94,8 @@
     border-bottom: 1px solid var(--fg);
   }
 
+  /* ---------- Workspace ---------- */
+
   .workspace {
     width: 100%;
     height: 70vh;
@@ -101,11 +108,7 @@
     border: none;
   }
 
-  .back {
-    margin-top: 48px;
-    font-size: 13px;
-    color: var(--muted);
-  }
+  /* ---------- Links ---------- */
 
   a {
     color: inherit;
@@ -114,6 +117,7 @@
   }
 </style>
 
+<!-- Fuente accesible provisoria -->
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400&display=swap" rel="stylesheet">
 </head>
 
@@ -131,7 +135,7 @@
 
 <main>
 
-<!-- ---------- HOME ---------- -->
+<!-- ---------- PORTADA ---------- -->
 
 <section id="home" class="active">
   <p>
@@ -158,12 +162,12 @@
     sistemas de representación y visualización espacial.
   </p>
 
-  <p class="back">
-    <a href="#" onclick="goBack()">volver</a>
+  <p>
+    <a href="#" onclick="openSection('home')">← Volver</a>
   </p>
 </section>
 
-<!-- ---------- RESOURCES ---------- -->
+<!-- ---------- RECURSOS ---------- -->
 
 <section id="resources">
 
@@ -177,14 +181,36 @@
     <iframe id="tool-frame" src="espacio-inm/index.html"></iframe>
   </div>
 
-  <p class="back">
-    <a href="#" onclick="goBack()">volver</a>
-  </p>
-
 </section>
 
 </main>
 
-<script src="js/navigation.js"></script>
+<script>
+  function openSection(id) {
+    document.querySelectorAll("section").forEach(s => s.classList.remove("active"));
+    document.getElementById(id).classList.add("active");
+  }
+
+  const frame = document.getElementById("tool-frame");
+  const tabs = document.querySelectorAll(".tabs button");
+
+  tabs.forEach(tab => {
+    tab.addEventListener("click", () => {
+      tabs.forEach(t => t.classList.remove("active"));
+      tab.classList.add("active");
+
+      if (tab.dataset.tool === "inm") {
+        frame.src = "espacio-inm/index.html";
+      }
+      if (tab.dataset.tool === "ra") {
+        frame.src = "ra/index.html";
+      }
+      if (tab.dataset.tool === "sg") {
+        frame.src = "sistemas-graficos/index.html";
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
