--- a/espacio-inm/espacio-inm.html
+++ b/espacio-inm/espacio-inm.html
@@ -11,7 +11,7 @@
 
 <header>
   <h1>espacio.INM</h1>
-  <p class="muted">Conversión de cubemaps a proyección equirectangular (2:1)</p>
+  <p class="muted">cubemaps → equirectangular</p>
 </header>
 
 <main>
