--- a/espacio-inm/espacio-inm.html
+++ b/espacio-inm/espacio-inm.html
@@ -4,19 +4,26 @@
   <meta charset="UTF-8" />
   <title>espacio.INM — rraum.LAB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../base.css">
   <link rel="stylesheet" href="espacio-inm.css">
 </head>
 <body>
 
 <header>
   <h1>espacio.INM</h1>
-  <p class="muted">cubemaps → equirectangular</p>
+  <p class="muted">Conversión de panoramas</p>
 </header>
 
-<main>
+<!-- 🔹 Pestañas -->
+<div class="tabs">
+  <button class="tab-btn active" data-target="cm2eq">CM → EQ</button>
+  <button class="tab-btn" data-target="eq2cm">EQ → CM</button>
+</div>
 
-  <section class="tool-main">
+<main id="workspace">
+
+  <!-- 🔹 Bloque Cubemap → Equirectangular -->
+  <section id="cm2eq" class="tool-main tab-content active">
 
     <!-- Columna izquierda -->
     <div class="cube-inputs">
@@ -53,7 +60,7 @@
 
       <div class="cube-face">
         <button type="button" class="file-btn" data-target="nz">+</button>
-        <span>Back (Z-)</span>
+        <span>Back (−Z)</span>
         <input type="file" id="nz" accept="image/*" style="display:none;">
       </div>
 
@@ -77,6 +84,29 @@
 
   </section>
 
+  <!-- 🔹 Bloque Equirectangular → Cubemap -->
+  <section id="eq2cm" class="tool-main tab-content">
+
+    <div class="cube-inputs">
+      <div class="cube-face">
+        <button type="button" class="file-btn" data-target="eqr">+</button>
+        <span>Equirectangular</span>
+        <input type="file" id="eqr" accept="image/*" style="display:none;">
+      </div>
+
+      <div class="actions">
+        <button id="build-eqr">Crear Cubemap</button>
+        <button id="download-eqr" disabled>Descargar ZIP</button>
+        <div class="status" id="status-eqr"></div>
+      </div>
+    </div>
+
+    <div class="viewer-panel">
+      <div id="viewer-eqr"></div>
+    </div>
+
+  </section>
+
 </main>
 
 <footer>
@@ -85,7 +115,23 @@
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.105.2/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/panolens/build/panolens.min.js"></script>
+
+<!-- 🔹 Librería JSZip -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+
 <script src="espacio-inm.js"></script>
+
+<!-- 🔹 Script para pestañas -->
+<script>
+  document.querySelectorAll('.tab-btn').forEach(btn => {
+    btn.addEventListener('click', () => {
+      document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+      document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
+      btn.classList.add('active');
+      document.getElementById(btn.dataset.target).classList.add('active');
+    });
+  });
+</script>
 
 </body>
 </html>
