--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <!-- Portada -->
     <main id="home">
-      <h2>Arte · Arquitectura · Ciencia aplicada</h2>
-      <h1>Plataforma de recursos gráficos</h1>
+      <h1>rraum.lab</h1>
+      <h2>Plataforma de recursos gráficos</h2>
     </main>
 
     <!-- Footer -->
