--- a/espacio-ra/espacio-ra.html
+++ b/espacio-ra/espacio-ra.html
@@ -5,6 +5,10 @@
   <title>espacio.RA — rraum.LAB</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="espacio-ra.css">
+
+  <!-- Librerías RA: deben ir en el head -->
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
 </head>
 <body>
 
@@ -48,8 +52,8 @@
       <div id="viewer-ra" style="display:none;">
         <a-scene embedded arjs>
           <a-marker type="pattern" url="marker.patt">
-            <!-- Aquí se cargará tu modelo -->
-            <a-entity obj-model="url:modelo.obj"></a-entity>
+            <!-- El modelo se inyecta dinámicamente desde JS -->
+            <a-entity></a-entity>
           </a-marker>
           <a-entity camera></a-entity>
         </a-scene>
@@ -65,10 +69,6 @@
 <script src="https://cdn.jsdelivr.net/npm/panolens@0.12.0/build/panolens.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.105.2/examples/js/loaders/OBJLoader.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.105.2/examples/js/loaders/STLLoader.js"></script>
-
-<!-- Librerías RA -->
-<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
 
 <!-- Lógica -->
 <script src="espacio-ra.js"></script>
