--- a/espacio-ra/espacio-ra.html
+++ b/espacio-ra/espacio-ra.html
@@ -46,7 +46,7 @@
 
       <div id="viewer-ra" style="display:none;">
         <a-scene embedded arjs>
-          <a-marker type="pattern" url="marker.patt">
+          <a-marker type="pattern" url="raumlab-logo.patt">
             <a-entity></a-entity>
           </a-marker>
           <a-entity camera></a-entity>
