arreglos en los tres archivos

--- a/espacio-ra/espacio-ra.html
+++ b/espacio-ra/espacio-ra.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="espacio-ra.css">
 
-  <!-- Librerías RA: deben ir en el head -->
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.2.1/aframe/build/aframe-ar.js"></script>
+  <!-- Librerías RA: actualizadas -->
+  <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ar-js-org@3.4.6/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body>
 
