--- a/espacio-ra/espacio-ra.html
+++ b/espacio-ra/espacio-ra.html
@@ -34,7 +34,9 @@
         </div>
 
         <button id="navigate-btn" disabled>Navegar</button>
+        <button id="camera-btn" disabled style="display:none;">Acceder a cámara</button>
         <button id="marker-btn" style="display:none;">Descargar marcador</button>
+
       </div>
 
       <div id="status" class="status">Seleccione un modo de visualización</div>
