--- a/espacio-ra/espacio-ra.html
+++ b/espacio-ra/espacio-ra.html
@@ -9,6 +9,17 @@
   <!-- Librerías RA: actualizadas -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/ar-js-org@3.4.6/aframe/build/aframe-ar.min.js"></script>
+  <script>
+  document.getElementById('view-mode').addEventListener('change', e => {
+    const mode = e.target.value;
+    if (mode === 'ra') {
+      document.getElementById('viewer-ra').style.display = 'block';
+      document.getElementById('viewer').style.display = 'none';
+      document.body.classList.add('ra-fullscreen');
+    }
+  });
+</script>
+
 </head>
 <body>
 
